MGS-3963 Add translations directives to form labels

--- a/view/frontend/templates/address/edit/field/customer_type.phtml
+++ b/view/frontend/templates/address/edit/field/customer_type.phtml
@@ -15,7 +15,7 @@ $selectedValue = $block->getCustomerTypeValue();
             <?php
             foreach($block->getOptions() as $option){
                 $selected = $option['value'] == $selectedValue ? 'selected="selected"' : '';
-                ?><option value="<?= $option['value']; ?>" <?= $selected; ?>><?= $option['label']; ?></option><?php
+                ?><option value="<?= $option['value']; ?>" <?= $selected; ?>><?= __($option['label']); ?></option><?php
             }
             ?>
         </select>
